--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   text-align: center;
+  background-color: #f0f5f5;
+  
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -28,6 +32,9 @@
   color: #61dafb;
 }
 
+span {
+  color: #05a1a5;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
